# genai-deepseek-app

./: .env.example  agentic_rag.py  pyproject.toml  rag_code.py  rag_frontend.py  requirements.txt  streamlit_app.py
agentic_rag_techniques/: agentic_rag_using_deepseek_qdrant_and_langchain.ipynb
